--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
         transform-style: preserve-3d;
         position: relative;
         width: 100%;
-        max-width: 400px;
+        max-width: 1000px;
         margin: 0 auto;
     }
 
     .envelope {
         width: 100%;
-        height: 400px;
+        height: 1000px;
         position: relative;
         transform-style: preserve-3d;
         transition: transform 0.8s cubic-bezier(0.68, -0.55, 0.27, 1.55);
@@ -123,18 +123,18 @@
 
     .letter-content h1 {
         color: #ff4d4d;
-        font-size: 24px;
+        font-size: 40px;
         margin-bottom: 10px;
     }
 
     .sender-info {
-        font-size: 14px;
+        font-size: 20px;
         color: #888;
     }
 
     .letter-text {
         margin-bottom: 10px;
-        font-size: 16px;
+        font-size: 35px;
         line-height: 1.6;
     }
 
@@ -162,7 +162,7 @@
         }
 
         .envelope {
-            height: 400px;
+            height: 1000px;
         }
 
         .envelope-front .front-content {
@@ -189,6 +189,16 @@
 
     h3 {
         margin: 10px;
+        font-size: 40px;
+    }
+
+    h2 {
+        margin: 10px;
+        font-size: 50px;
+    }
+
+    p {
+        font-size: 30px;
     }
 </style>
 
