--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         }
 
         body {
-            height: 100vh;
-            width: 100%;
+            height: 80vh;
+            width: 95%;
             display: flex;
             flex-direction: column;
             justify-content: space-evenly;
@@ -29,7 +29,7 @@
             position: absolute;
             top: -50px;
             color: red;
-            font-size: 20px;
+            font-size: 45px;
             animation: fall linear infinite;
         }
 
@@ -47,7 +47,7 @@
 
         .wrapper {
             height: 150px;
-            width: 225px;
+            width: 550px;
             background-color: #3760C9;
             position: relative;
             display: flex;
@@ -60,39 +60,39 @@
         .lid {
             position: absolute;
             height: 100%;
-            width: 100%;
+            width: 40%;
             top: 0;
             left: 0;
-            border-right: 112.5px solid transparent;
-            border-bottom: 75px solid transparent;
-            border-left: 112.5px solid transparent;
+            border-right: 270.5px solid transparent;
+            border-bottom: 76px solid transparent;
+            border-left: 270.5px solid transparent;
             transform-origin: top;
             transition: transform 0.25s linear;
         }
 
         .lid.one {
-            border-top: 75px solid #658ced;
+            border-top: 145px solid #658ced;
             transform: rotateX(0deg);
             z-index: 3;
             transition-delay: 0.75s;
         }
 
         .lid.one._1 {
-            border-top: 75px solid #ef3737;
+            border-top: 145px solid #ef3737;
             transform: rotateX(0deg);
             z-index: 3;
             transition-delay: 0.75s;
         }
 
         .lid.one._2 {
-            border-top: 75px solid #3feb6b;
+            border-top: 145px solid #3feb6b;
             transform: rotateX(0deg);
             z-index: 3;
             transition-delay: 0.75s;
         }
 
         .lid.two {
-            border-top: 75px solid #3760C9;
+            border-top: 135px solid #3760C9;
             transform: rotateX(90deg);
             z-index: 1;
             transition-delay: 0.5s;
@@ -104,10 +104,14 @@
             width: 100%;
             top: 0;
             left: 0;
-            border-top: 75px solid transparent;
+            border-top: 120px solid transparent;
+            border-right: 274.5px solid #C4DFF0;
+            border-bottom: 145px solid #C4DFF0;
+            border-left: 274.5px solid #a4d4f2;
+            /* border-top: 75px solid transparent;
             border-right: 112.5px solid #C4DFF0;
             border-bottom: 75px solid #C4DFF0;
-            border-left: 112.5px solid #a4d4f2;
+            border-left: 112.5px solid #a4d4f2; */
             z-index: 3;
         }
 
@@ -117,10 +121,10 @@
             width: 100%;
             top: 0;
             left: 0;
-            border-top: 75px solid transparent;
-            border-right: 112.5px solid #C4DFF0;
-            border-bottom: 75px solid #C4DFF0;
-            border-left: 112.5px solid #f3b0b0;
+            border-top: 120px solid transparent;
+            border-right: 274.5px solid #C4DFF0;
+            border-bottom: 145px solid #C4DFF0;
+            border-left: 274.5px solid #f3b0b0;
             z-index: 3;
         }
 
@@ -130,19 +134,19 @@
             width: 100%;
             top: 0;
             left: 0;
-            border-top: 75px solid transparent;
-            border-right: 112.5px solid #C4DFF0;
-            border-bottom: 75px solid #C4DFF0;
-            border-left: 112.5px solid #cbefcc;
+            border-top: 120px solid transparent;
+            border-right: 274.5px solid #C4DFF0;
+            border-bottom: 145px solid #C4DFF0;
+            border-left: 274.5px solid #cbefcc;
             z-index: 3;
         }
 
         .envelope-text {
             position: absolute;
-            bottom: -55px;
+            bottom: -115px;
             left: 50%;
             transform: translateX(-50%);
-            font-size: 11px;
+            font-size: 25px;
             font-weight: bold;
             color: #353ad3ad;
             text-align: center;
@@ -153,14 +157,14 @@
             position: absolute;
             top: 0;
             width: 80%;
-            height: 80%;
+            height: 120%;
             background-color: white;
-            border-radius: 5px;
+            border-radius: 10px;
             z-index: 2;
             transition: 0.5s;
             text-align: center;
-            line-height: 35px;
-            font-size: 18px;
+            line-height: 65px;
+            font-size: 40px;
             color: #3B4049;
             font-family: 'Valentine', sans-serif;
         }
@@ -181,13 +185,14 @@
         }
 
         h3 {
-            font-size: 50px;
+            margin-top: -110px;
+            font-size: 120px;
             font-family: 'Valentine', sans-serif;
         }
 
         h1 {
-            font-size: 30px;
-            margin-top: -70px;
+            font-size: 110px;
+            margin-top: -520px;
             font-family: 'Valentine', sans-serif;
         }
 
