--- a/index.html
+++ b/index.html
@@ -16,13 +16,15 @@
             height: 80vh;
             width: 100%;
             display: flex;
-            flex-direction: column;
-            justify-content: space-evenly;
+            justify-content: space-around;
             align-items: center;
             font-family: sans-serif;
             background-color: #60a0cd;
             overflow: hidden;
             position: relative;
+            align-content: stretch;
+            flex-direction: column;
+            flex-wrap: nowrap;
         }
 
         .heart {
