--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<p>Each photo holds a piece of our love story memories that bring back smiles,
 				laughter, and the warmth of every moment shared with you.</p>
 			<ul class="actions">
-				<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
+				<li><a href="#" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 			</ul>
 		</div>
 
@@ -41,8 +41,8 @@
 		<nav id="nav">
 			<ul class="links">
 				<li class="active"><a href="./index.html">Moments With You</a></li>
-				<li><a href="./generic.html">Where it Begins</a></li>
-				<li><a href="./elements.html">Summary of US</a></li>
+				<li><a href="./pages/whereItBegins.html">When it Begins</a></li>
+				<li><a href="./pages/summaryOfUs.html">Summary of US</a></li>
 			</ul>
 			<ul class="icons">
 				<li><a href="https://www.facebook.com/muj.85256" class="icon brands fa-facebook-f"><span
