--- a/pages/may30.html
+++ b/pages/may30.html
@@ -23,14 +23,14 @@
 
 		<!-- Header -->
 		<header id="header">
-			<a href="index.html" class="logo">Moments</a>
+			<a href="../index.html" class="logo">Moments</a>
 		</header>
 
 		<!-- Nav -->
 		<nav id="nav">
 			<ul class="links">
 				<li class="active"><a href="../index.html">◄ Go back to Main Page</a></li>
-				<li><a href="../generic.html">Where it Begins</a></li>
+				<li><a href="../generic.html">When it Begins</a></li>
 				<li><a href="../elements.html">Summary of US</a></li>
 			</ul>
 			<ul class="icons">
