--- a/pages/may30.html
+++ b/pages/may30.html
@@ -30,8 +30,8 @@
 		<nav id="nav">
 			<ul class="links">
 				<li class="active"><a href="../index.html">◄ Go back to Main Page</a></li>
-				<li><a href="../generic.html">When it Begins</a></li>
-				<li><a href="../elements.html">Summary of US</a></li>
+				<li><a href="./whereItBegins.html">When it Begins</a></li>
+				<li><a href="./summaryOfUs.html">Summary of US</a></li>
 			</ul>
 			<ul class="icons">
 				<li><a href="https://www.facebook.com/muj.85256" class="icon brands fa-facebook-f"><span
