--- a/index.html
+++ b/index.html
@@ -169,6 +169,26 @@
 						<li><a href="./pages/may30.html" class="button">Full Story</a></li>
 					</ul>
 				</article>
+				<article>
+					<header>
+						<span class="date">June 30, 2025</span>
+						<h2><a>Samgyupsal's<br />
+								Date</a></h2>
+					</header>
+					<a class="image fit"><img src="./images/image132.jpg" alt="" /></a>
+					<p>We celebrated our monthsary at a samgyupsal restaurant after struggling to decide where to eat.
+						We finally chose
+						samgyupsal to satisfy her cravings, and coincidentally ran into some of our co-workers there. We
+						sat at a separate table
+						to enjoy our time together, and by the end of the meal, we were both extremely full. One of us
+						even got a stomach ache
+						from eating too much, so we took a taxi home. We ended the night laughing at each other as we
+						slowly walked the rest of
+						the way home, full and happy.</p>
+					<ul class="actions special">
+						<li><a href="./pages/june30.html" class="button">Full Story</a></li>
+					</ul>
+				</article>
 				<!-- <article>
 					<header>
 						<span class="date">April 7, 2017</span>
