--- a/pages/letters/letterMar30.html
+++ b/pages/letters/letterMar30.html
@@ -62,7 +62,7 @@
                 </header>
                 <div class="image main"><img src="/For_My_Wife/images/monthsary3.png" alt="" /></div>
                 <p>My Most Gorgeous Wifey,</p>
-                <p>Happy Monthsary, and most especially, Happy Birthday, my love. 💖
+                <p>Happy Monthsary, and most especially, Happy Birthday, my wife. 💖
                 <p>Today, we celebrate not only another month of us, but the beautiful day God brought you into this
                     world, the day He gave me the greatest gift I’ll ever receive.</p>
                 </p>
@@ -71,7 +71,7 @@
                     every laugh, every silent hug and every silly moment made our love more real, more raw, and more
                     unbreakable.</p>
                 <p>This month is even more special because it’s your birthday. And if I could give you the world, I
-                    would—but for now, I offer you my whole heart. I assure you:
+                    would, but for now, I offer you my whole heart. I assure you:
                 <p>— That I will always put God first in our relationship so we never lose our way.</p>
                 <p>— That I will love you every single day, in every season, without question.</p>
                 <p>— That I will protect you, stand beside you, and never let you carry burdens alone.</p>
@@ -85,7 +85,7 @@
                 <p>So here’s to your life, your light, and to us, still growing, still choosing each other, and still
                     falling deeper every month.</p>
                 <p>I love you. Always and forever.</p>
-                <p>Happy Monthsary and Happy Birthday, My Love.</p>
+                <p>Happy Monthsary and Happy Birthday, My Wife.</p>
                 <p>Forever yours,</p>
                 <p>Jumryl</p>
             </section>
