Add Word Search

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 				<li class="active"><a href="./index.html">Moments With You</a></li>
 				<li><a href="./pages/whereItBegins.html">When it Begins</a></li>
 				<li><a href="./pages/myLetters.html">My Letters</a></li>
+				<li><a href="./Games/gamesMenu.html">Games</a></li>
 				<li><a href="./pages/summaryOfUs.html">Summary of US</a></li>
 			</ul>
 			<ul class="icons">
